--- a/broker/broker-local.yml
+++ b/broker/broker-local.yml
@@ -2,7 +2,30 @@
 
 server:
   port: 8082
+
 address: "localhost"
+protocol: http
+
+http:
+  mappers:
+    jsonPrettyPrint: true
+    
+udp:
+  port: 8080
+
+websocket:
+  endpointUrl: ws-measur
+  allowedOrigin: "*"
+  topicDestinationPrefix: /topica
+  allThingsTopic: /topica/all
+  alertsTopicPrefix: /topica/alerts
+  allAlertsTopic: /topica/alerts/all
+
+keepalive:
+  timeInterval: 60000
+  timeout: 1000
+
+appKey: dummy
 
 registry:
   allowRegistration: true
